Fix report dialog disappearing off-screen with low vertical resolutions

--- a/src/twitch_content.css
+++ b/src/twitch_content.css
@@ -28,16 +28,19 @@
 .nor-report-wrapper {
     position: absolute;
     z-index: 150;
-    top: 0; left: 0; right: 0; bottom: 0;
+    top: 50px; left: 0; right: 0; bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
+    padding: 2rem;
 }
 
 .nor-report-dialog {
     padding: 2em;
+    max-height: 100%;
     background-color: darkgray;
+    overflow-y: auto;
 }
 
 .nor-reason-list {
